--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.3_SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.3_SWIRE.ipynb
@@ -30,9 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -51,9 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -148,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Adding magnitude and band-flag columns\n",
@@ -166,7 +160,8 @@
     "        catalogue.add_column(Column(error, name=\"m{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        catalogue.add_column(Column(\n",
+    "        if \"ap\" not in col:\n",
+    "            catalogue.add_column(Column(\n",
     "                np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
@@ -175,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -246,9 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -309,9 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -342,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -380,9 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -433,9 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
