ELAIS-N1 flags produced on Vulcain
#1

--- a/dmu1/dmu1_ml_ELAIS-N1/3.2_Flagging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/3.2_Flagging.ipynb
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,29 +99,29 @@
      "text": [
       "GPC1 g\n",
       "  Aperture magnitude\n",
-      "    Number of flagged objects: 0\n",
+      "    Number of flagged objects: 107\n",
       "  Total magnitude\n",
       "    Number of flagged objects: 0\n",
       "GPC1 r\n",
       "  Aperture magnitude\n",
-      "    Number of flagged objects: 0\n",
+      "    Number of flagged objects: 174\n",
       "  Total magnitude\n",
-      "    Number of flagged objects: 0\n",
+      "    Number of flagged objects: 4\n",
       "GPC1 i\n",
       "  Aperture magnitude\n",
-      "    Number of flagged objects: 1\n",
+      "    Number of flagged objects: 150\n",
       "  Total magnitude\n",
       "    Number of flagged objects: 0\n",
       "GPC1 z\n",
       "  Aperture magnitude\n",
-      "    Number of flagged objects: 0\n",
+      "    Number of flagged objects: 70\n",
       "  Total magnitude\n",
-      "    Number of flagged objects: 0\n",
+      "    Number of flagged objects: 1\n",
       "GPC1 y\n",
       "  Aperture magnitude\n",
-      "    Number of flagged objects: 0\n",
+      "    Number of flagged objects: 37\n",
       "  Total magnitude\n",
-      "    Number of flagged objects: 0\n"
+      "    Number of flagged objects: 1\n"
      ]
     }
    ],
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -216,35 +218,35 @@
       "Megacam g (aperture) - WFC g (aperture):\n",
       "  Number of outliers: 0\n",
       "Megacam g (total) - WFC g (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 35\n",
       "SUPRIME g (aperture) - WFC g (aperture):\n",
       "  Number of outliers: 0\n",
       "SUPRIME g (total) - WFC g (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 6\n",
       "GPC1 g (aperture) - WFC g (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 g (total) - WFC g (total):\n",
       "  Number of outliers: 0\n",
       "SUPRIME g (aperture) - Megacam g (aperture):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 1\n",
       "SUPRIME g (total) - Megacam g (total):\n",
       "  Number of outliers: 0\n",
       "GPC1 g (aperture) - Megacam g (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 g (total) - Megacam g (total):\n",
-      "  Number of outliers: 4\n",
+      "  Number of outliers: 752\n",
       "GPC1 g (aperture) - SUPRIME g (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 g (total) - SUPRIME g (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 23\n",
       "Megacam r (aperture) - WFC r (aperture):\n",
       "  Number of outliers: 0\n",
       "Megacam r (total) - WFC r (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 22\n",
       "SUPRIME r (aperture) - WFC r (aperture):\n",
       "  Number of outliers: 0\n",
       "SUPRIME r (total) - WFC r (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 6\n",
       "GPC1 r (aperture) - WFC r (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 r (total) - WFC r (total):\n",
@@ -256,11 +258,11 @@
       "GPC1 r (aperture) - Megacam r (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 r (total) - Megacam r (total):\n",
-      "  Number of outliers: 6\n",
+      "  Number of outliers: 584\n",
       "GPC1 r (aperture) - SUPRIME r (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 r (total) - SUPRIME r (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 31\n",
       "SUPRIME i (aperture) - WFC i (aperture):\n",
       "  Number of outliers: 0\n",
       "SUPRIME i (total) - WFC i (total):\n",
@@ -272,7 +274,7 @@
       "GPC1 i (aperture) - SUPRIME i (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 i (total) - SUPRIME i (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 161\n",
       "Megacam z (aperture) - WFC z (aperture):\n",
       "  Number of outliers: 0\n",
       "Megacam z (total) - WFC z (total):\n",
@@ -286,21 +288,21 @@
       "GPC1 z (total) - WFC z (total):\n",
       "  Number of outliers: 0\n",
       "SUPRIME z (aperture) - Megacam z (aperture):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 6\n",
       "SUPRIME z (total) - Megacam z (total):\n",
       "  Number of outliers: 0\n",
       "GPC1 z (aperture) - Megacam z (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 z (total) - Megacam z (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 1\n",
       "GPC1 z (aperture) - SUPRIME z (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 z (total) - SUPRIME z (total):\n",
-      "  Number of outliers: 0\n",
+      "  Number of outliers: 28\n",
       "GPC1 y (aperture) - SUPRIME y (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 y (total) - SUPRIME y (total):\n",
-      "  Number of outliers: 0\n"
+      "  Number of outliers: 9\n"
      ]
     }
    ],
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
