--- a/dmu1/dmu1_ml_XMM-LSS/1.1_CANDELS-3D-HST.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.1_CANDELS-3D-HST.ipynb
@@ -7,6 +7,8 @@
     "# XMM-LSS master catalogue\n",
     "## Preparation of HST CANDELS-3D data\n",
     "\n",
+    "THIS IS NO LONGER MERGED INTO THE MASTERLIST. We instead use the CANDELS-UDS catalogue which also includes forced photmetry from other imaging data.\n",
+    "\n",
     "The catalogue comes from `dmu0_CANDELS-3D-HST`.\n",
     "\n",
     "In the catalogue, we keep:\n",
@@ -40,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
