Replacing CANDELS-3D-HST with UDS
CANDELS 3D-HST seems to have an extra band f140w #4

--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -95,10 +95,8 @@
    },
    "outputs": [],
    "source": [
-    "candels = Table.read(\"{}/CANDELS.fits\".format(TMP_DIR)\n",
-    "                    )[\"candels_id\",\n",
-    "                      \"candels_ra\",\n",
-    "                      \"candels_dec\"]           # 1.1\n",
+    "\n",
+    "\n",
     "#WIRCAM:\n",
     "cfht_wirds = Table.read(\"{}/CFHT-WIRDS.fits\".format(TMP_DIR)\n",
     "                       )[\"wirds_intid\",\n",
@@ -106,6 +104,10 @@
     "                         \"wirds_dec\"]     # 1.3\n",
     "\n",
     "#Megacam:\n",
+    "#candels = Table.read(\"{}/CANDELS.fits\".format(TMP_DIR)\n",
+    "#                    )[\"candels_id\",\n",
+    "#                      \"candels_ra\",\n",
+    "#                      \"candels_dec\"]           # 1.1\n",
     "#cfhtls_wide = Table.read(\"{}/CFHTLS-WIDE.fits\".format(TMP_DIR)\n",
     "#                        )[\"cfhtls-wide_id\",\n",
     "#                          \"cfhtls-wide_ra\",\n",
@@ -125,6 +127,7 @@
     "#                     'sparcs_stellarity']             # 1.12\n",
     "megacam = Table.read(\"{}/megacam_merged_catalogue_xmm-lss.fits\".format(TMP_DIR)\n",
     "                   )['megacam_intid', \n",
+    "                     \"candels_id\",\n",
     "                     \"cfhtls-wide_id\",\n",
     "                     \"cfhtls-deep_id\",\n",
     "                     'sparcs_intid',\n",
@@ -1097,7 +1100,8 @@
    },
    "outputs": [],
    "source": [
-    "candels_moc =   MOC(filename=\"../../dmu0/dmu0_CANDELS-3D-HST/data/CANDELS-3D-HST_XMM-LSS_MOC.fits\") # 1.1\n",
+    "#candels_moc =   MOC(filename=\"../../dmu0/dmu0_CANDELS-3D-HST/data/CANDELS-3D-HST_XMM-LSS_MOC.fits\") # 1.1\n",
+    "candels_moc = MOC(filename=\"../../dmu0/dmu0_CANDELS-UDS/data/hlsp_candels_hst_wfc3_uds-tot-multiband_f160w_v1_MOC.fits\") # 1.2\n",
     "cfht_wirds_moc =  MOC(filename=\"../../dmu0/dmu0_CFHT-WIRDS/data/XMM-LSS_Ks-priors_MOC.fits\")        # 1.3\n",
     "cfhtls_wide_moc = MOC(filename=\"../../dmu0/dmu0_CFHTLS/data/CFHTLS-WIDE_XMM-LSS_MOC.fits\")          # 1.4a\n",
     "cfhtls_deep_moc = MOC(filename=\"../../dmu0/dmu0_CFHTLS/data/CFHTLS-DEEP_XMM-LSS_MOC.fits\")          # 1.4b\n",
@@ -1496,7 +1500,10 @@
     "    #['swire',        \"SWIRE.fits\",          Table.read(\"{}/SWIRE.fits\".format(TMP_DIR)),         'swire_intid'],  \n",
     "    ['irac',       \n",
     "     \"irac_merged_catalogue_xmm-lss.fits\",        \n",
-    "     Table.read(\"{}/irac_merged_catalogue_xmm-lss.fits\".format(TMP_DIR)),        \n",
+    "     Table.read(\"{}/irac_merged_catalogue_xmm-lss.fits\".format(TMP_DIR)).remove_columns('candels_id',\n",
+    "                                                                                       'candels_stellarity',\n",
+    "                                                                                       'candels_flag_cleaned',\n",
+    "                                                                                       'candels_flag_gaia'),        \n",
     "     'irac_intid'], \n",
     "    \n",
     "    #['hsc_wide ',    \"HSC-WIDE.fits\",       Table.read(\"{}/HSC-WIDE.fits\".format(TMP_DIR)),      'hsc-wide_id' ],\n",
@@ -1515,7 +1522,10 @@
     "    #['uds',          \"UKIDSS-UDS.fits\",     Table.read(\"{}/UKIDSS-UDS.fits\".format(TMP_DIR)),    'uds_id'],    \n",
     "    ['ukidss',       \n",
     "     \"ukidss_merged_catalogue_xmm-lss.fits\",        \n",
-    "     Table.read(\"{}/ukidss_merged_catalogue_xmm-lss.fits\".format(TMP_DIR)),        \n",
+    "     Table.read(\"{}/ukidss_merged_catalogue_xmm-lss.fits\".format(TMP_DIR)).remove_columns('candels_id',\n",
+    "                                                                                       'candels_stellarity',\n",
+    "                                                                                       'candels_flag_cleaned',\n",
+    "                                                                                       'candels_flag_gaia'),         \n",
     "     'ukidss_intid'], \n",
     "    \n",
     "    ['vipers',       \"VIPERS.fits\",         Table.read(\"{}/VIPERS.fits\".format(TMP_DIR)),        'vipers_id'],   \n",
@@ -1645,11 +1655,11 @@
     "        \n",
     "    nb_optical_flux = (\n",
     "        # CANDELS\n",
-    "        1 * ~np.isnan(sub_catalogue['f_candels_f140w']) + \n",
-    "        1 * ~np.isnan(sub_catalogue['f_candels_f160w']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_candels_f606w']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_candels_f814w']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_candels_f125w']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_acs_f606w']) + \n",
+    "        1 * ~np.isnan(sub_catalogue['f_acs_f814w']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_wfc3_f125w']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_wfc3_f160w']) +\n",
+    "\n",
     "        # DECaLS\n",
     "        1 * ~np.isnan(sub_catalogue['f_decam_g']) + \n",
     "        1 * ~np.isnan(sub_catalogue['f_decam_r']) +\n",
