--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -321,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if FIRST_RUN_FOR_CIGALE:\n",
@@ -522,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
