Column renaming in GAMA-12
#7

--- a/dmu1/dmu1_ml_GAMA-12/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-12/2_Merging.ipynb
@@ -710,27 +710,27 @@
    "source": [
     "#Rename columns for UKIDSS-LAS and VISTA-VIKING\n",
     "\n",
-    "for band in ['y','j','h','k']:\n",
-    "    master_catalogue['f_ap_ukidss_' + band].name = 'f_ap_wfcam_' + band\n",
-    "    master_catalogue['ferr_ap_ukidss_' + band].name = 'ferr_ap_wfcam_' + band\n",
-    "    master_catalogue['m_ap_ukidss_' + band].name = 'm_ap_wfcam_' + band\n",
-    "    master_catalogue['merr_ap_ukidss_' + band].name = 'merr_ap_wfcam_' + band\n",
-    "    master_catalogue['f_ukidss_' + band].name = 'f_wfcam_' + band\n",
-    "    master_catalogue['ferr_ukidss_' + band].name = 'ferr_wfcam_' + band\n",
-    "    master_catalogue['m_ukidss_' + band].name = 'm_wfcam_' + band\n",
-    "    master_catalogue['merr_ukidss_' + band].name = 'merr_wfcam_' + band\n",
-    "    master_catalogue['flag_ukidss_' + band].name = 'flag_wfcam_' + band\n",
+    "for band in ['u', 'g', 'r', 'i']:\n",
+    "    master_catalogue['f_ap_kids_' + band].name = 'f_ap_omegacam_' + band\n",
+    "    master_catalogue['ferr_ap_kids_' + band].name = 'ferr_ap_omegacam_' + band\n",
+    "    master_catalogue['m_ap_kids_' + band].name = 'm_ap_omegacam_' + band\n",
+    "    master_catalogue['merr_ap_kids_' + band].name = 'merr_ap_omegacam_' + band\n",
+    "    master_catalogue['f_kids_' + band].name = 'f_omegacam_' + band\n",
+    "    master_catalogue['ferr_kids_' + band].name = 'ferr_omegacam_' + band\n",
+    "    master_catalogue['m_kids_' + band].name = 'm_omegacam_' + band\n",
+    "    master_catalogue['merr_kids_' + band].name = 'merr_omegacam_' + band\n",
+    "    master_catalogue['flag_kids_' + band].name = 'flag_omegacam_' + band    \n",
     "\n",
     "for band in ['z','y','j','h','k']:\n",
-    "    master_catalogue['f_ap_viking_' + band].name = 'f_ap_vircam_' + band\n",
-    "    master_catalogue['ferr_ap_viking_' + band].name = 'ferr_ap_vircam_' + band\n",
-    "    master_catalogue['m_ap_viking_' + band].name = 'm_ap_vircam_' + band\n",
-    "    master_catalogue['merr_ap_viking_' + band].name = 'merr_ap_vircam_' + band\n",
-    "    master_catalogue['f_viking_' + band].name = 'f_vircam_' + band\n",
-    "    master_catalogue['ferr_viking_' + band].name = 'ferr_vircam_' + band\n",
-    "    master_catalogue['m_viking_' + band].name = 'm_vircam_' + band\n",
-    "    master_catalogue['merr_viking_' + band].name = 'merr_vircam_' + band\n",
-    "    master_catalogue['flag_viking_' + band].name = 'flag_vircam_' + band"
+    "    master_catalogue['f_ap_viking_' + band].name = 'f_ap_vista_' + band\n",
+    "    master_catalogue['ferr_ap_viking_' + band].name = 'ferr_ap_vista_' + band\n",
+    "    master_catalogue['m_ap_viking_' + band].name = 'm_ap_vista_' + band\n",
+    "    master_catalogue['merr_ap_viking_' + band].name = 'merr_ap_vista_' + band\n",
+    "    master_catalogue['f_viking_' + band].name = 'f_vista_' + band\n",
+    "    master_catalogue['ferr_viking_' + band].name = 'ferr_vista_' + band\n",
+    "    master_catalogue['m_viking_' + band].name = 'm_vista_' + band\n",
+    "    master_catalogue['merr_viking_' + band].name = 'merr_vista_' + band\n",
+    "    master_catalogue['flag_viking_' + band].name = 'flag_vista_' + band"
    ]
   },
   {
@@ -853,22 +853,22 @@
     "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
     "    #1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_u']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_i']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_u']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_i']) \n",
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_h']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_k']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_z']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_h']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_y']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_j']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_h']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_k']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_z']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_y']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = np.zeros(len(master_catalogue), dtype=bool)"
