Column renaming on GAMA-15
#3

--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -636,11 +636,29 @@
    },
    "outputs": [],
    "source": [
-    "#Rename columns for VISTA-VIKING\n",
+    "#Rename columns for KIDS and VISTA-VIKING\n",
     "\n",
-    "for col in master_catalogue.colnames:\n",
-    "    if \"viking\" in col and not col.startswith(\"viking\"):\n",
-    "        master_catalogue[col].name = col.replace(\"viking\", \"vircam\")"
+    "for band in ['u', 'g', 'r', 'i']:\n",
+    "    master_catalogue['f_ap_kids_' + band].name = 'f_ap_omegacam_' + band\n",
+    "    master_catalogue['ferr_ap_kids_' + band].name = 'ferr_ap_omegacam_' + band\n",
+    "    master_catalogue['m_ap_kids_' + band].name = 'm_ap_omegacam_' + band\n",
+    "    master_catalogue['merr_ap_kids_' + band].name = 'merr_ap_omegacam_' + band\n",
+    "    master_catalogue['f_kids_' + band].name = 'f_omegacam_' + band\n",
+    "    master_catalogue['ferr_kids_' + band].name = 'ferr_omegacam_' + band\n",
+    "    master_catalogue['m_kids_' + band].name = 'm_omegacam_' + band\n",
+    "    master_catalogue['merr_kids_' + band].name = 'merr_omegacam_' + band\n",
+    "    master_catalogue['flag_kids_' + band].name = 'flag_omegacam_' + band    \n",
+    "\n",
+    "for band in ['z','y','j','h','k']:\n",
+    "    master_catalogue['f_ap_viking_' + band].name = 'f_ap_vista_' + band\n",
+    "    master_catalogue['ferr_ap_viking_' + band].name = 'ferr_ap_vista_' + band\n",
+    "    master_catalogue['m_ap_viking_' + band].name = 'm_ap_vista_' + band\n",
+    "    master_catalogue['merr_ap_viking_' + band].name = 'merr_ap_vista_' + band\n",
+    "    master_catalogue['f_viking_' + band].name = 'f_vista_' + band\n",
+    "    master_catalogue['ferr_viking_' + band].name = 'ferr_vista_' + band\n",
+    "    master_catalogue['m_viking_' + band].name = 'm_vista_' + band\n",
+    "    master_catalogue['merr_viking_' + band].name = 'merr_vista_' + band\n",
+    "    master_catalogue['flag_viking_' + band].name = 'flag_vista_' + band"
    ]
   },
   {
@@ -762,10 +780,10 @@
     "    #1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
     "    #1 * ~np.isnan(master_catalogue['f_decam_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_u']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_i']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_u']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_i']) \n",
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
@@ -773,11 +791,11 @@
     "    1 * ~np.isnan(master_catalogue['f_ukidss_j']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_ukidss_h']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_ukidss_k']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_z']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_h']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vircam_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_z']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_y']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = np.zeros(len(master_catalogue), dtype=bool)"
