XMM-LSS ready to rerun on Vulcain
#4

--- a/dmu1/dmu1_ml_XMM-LSS/1.3_CFHT-WIRDS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.3_CFHT-WIRDS.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
