--- a/dmu1/dmu1_ml_XMM-LSS/2.5_IRAC_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.5_IRAC_merge.ipynb
@@ -509,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "seip = Table.read(\"../../dmu0/dmu0_SEIP/data/SEIP_XMM-LSS.fits\")\n",
@@ -909,7 +911,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "has_candels_irac_i3 = ~np.isnan(master_catalogue['f_candels-irac_i3'])\n",
