Masterlist overview notebook

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -17,18 +17,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from pymoc import MOC\n",
+    "\n",
+    "import os\n",
+    "#import humanfriendly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -37,8 +40,8 @@
     "dr1 = [\n",
     "# Field                suffix\n",
     "['AKARI-NEP',          '20171202' ],\n",
-    "['AKARI-SEP',          '20180122'  ],\n",
-    "['Bootes',             '20180111'  ],\n",
+    "['AKARI-SEP',          '20180122' ],\n",
+    "['Bootes',             '20180111' ],\n",
     "['CDFS-SWIRE',         '20180129' ],\n",
     "['COSMOS',             '20180112' ],\n",
     "['EGS',                '20171202' ],\n",
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +74,17 @@
     "masterlist_summary.add_column(Column(data = np.array(dr1)[:,0], name = 'Field'))\n",
     "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = '#Objects'))\n",
     "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = '#Area (sq. degrees)'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = '#Size (MB)'))"
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = '#File size'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help_moc = MOC(filename='../dmu2/help_coverage_MOC.fits')\n",
+    "print('Total HELP area: {} sqare degrees'.format(round(help_moc.area_sq_deg)))"
    ]
   },
   {
@@ -81,97 +94,34 @@
    "outputs": [],
    "source": [
     "for field in dr1:\n",
-    "    number_objects = len(Table.read('dmu1_{}/data/master_catalogue_{}_{}.fits'.format(field[0], field[0], field[1])))\n",
+    "    number_objects = len(Table.read('dmu1_{}/data/master_list_cross_ident_{}_{}.fits'.format(field[0], \n",
+    "                                                                                      field[0].lower(), \n",
+    "                                                                                      field[1])))\n",
     "    masterlist_summary[masterlist_summary['Field'] == field[0]]['#Objects'] = number_objects\n",
     "    \n",
-    "    area = 10.\n",
     "    \n",
-    "    size = 10."
+    "    moc = MOC(filename='../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0]))\n",
+    "    area = round(moc.area_sq_deg)\n",
+    "    masterlist_summary[masterlist_summary['Field'] == field[0]]['#Area (sq. degrees)'] = area\n",
+    "    \n",
+    "    size = os.stat('dmu1_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
+    "                                                                                      field[0].lower(), \n",
+    "                                                                                      field[1])).st_size\n",
+    "    #Can't install packages on Vulcain\n",
+    "    #size_readable = humanfriendly.format_size(size)\n",
+    "    masterlist_summary[masterlist_summary['Field'] == field[0]]['#File size'] = size\n",
+    "    \n",
+    "    #TODO:\n",
+    "    num_surveys = 0.\n",
+    "    \n",
+    "    num_bands = 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "&lt;Table length=23&gt;\n",
-       "<table id=\"table4569981840-979669\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>Field</th><th>#Objects</th><th>#Area (sq. degrees)</th><th>#Size (MB)</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>1</td><td>AKARI-SEP</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>3</td><td>CDFS-SWIRE</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>5</td><td>EGS</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>6</td><td>ELAIS-N1</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>7</td><td>ELAIS-N2</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>8</td><td>ELAIS-S1</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>9</td><td>GAMA-09</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>10</td><td>GAMA-12</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>11</td><td>GAMA-15</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>14</td><td>Lockman-SWIRE</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>15</td><td>NGP</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>17</td><td>SGP</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "<tr><td>22</td><td>XMM-LSS</td><td>0</td><td>nan</td><td>nan</td></tr>\n",
-       "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
-       ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
-       "display: inline-block; margin-right: 1em; }\n",
-       ".paginate_button { margin-right: 5px; }\n",
-       "</style>\n",
-       "<script>\n",
-       "\n",
-       "var astropy_sort_num = function(a, b) {\n",
-       "    var a_num = parseFloat(a);\n",
-       "    var b_num = parseFloat(b);\n",
-       "\n",
-       "    if (isNaN(a_num) && isNaN(b_num))\n",
-       "        return ((a < b) ? -1 : ((a > b) ? 1 : 0));\n",
-       "    else if (!isNaN(a_num) && !isNaN(b_num))\n",
-       "        return ((a_num < b_num) ? -1 : ((a_num > b_num) ? 1 : 0));\n",
-       "    else\n",
-       "        return isNaN(a_num) ? -1 : 1;\n",
-       "}\n",
-       "\n",
-       "require.config({paths: {\n",
-       "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
-       "}});\n",
-       "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4569981840-979669').dataTable()\");\n",
-       "    \n",
-       "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
-       "    \"optionalnum-asc\": astropy_sort_num,\n",
-       "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
-       "});\n",
-       "\n",
-       "    $('#table4569981840-979669').dataTable({\n",
-       "        order: [],\n",
-       "        pageLength: 50,\n",
-       "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
-       "        pagingType: \"full_numbers\",\n",
-       "        columnDefs: [{targets: [0, 2, 3, 4], type: \"optionalnum\"}]\n",
-       "    });\n",
-       "});\n",
-       "</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "masterlist_summary.show_in_notebook()"
    ]
@@ -184,7 +134,7 @@
    },
    "outputs": [],
    "source": [
-    "masterlist_summary.write('dr1_definition.fits')"
+    "masterlist_summary.write('dr1_overview.fits')"
    ]
   }
  ],
